--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -45,15 +45,18 @@
             <p>
               <%= link_to "Selecionar",
                           plans_update_selected_plan_path(plan_id: plan.id), method: :put,
-                          class: "btn btn-primary" %>
+                          class: "btn btn-primary",
+                          id: "button-select-plan" %>
               <%= link_to "",
                           edit_plan_path(plan),
-                          class: "lnr lnr-pencil btn btn-default" %>
+                          class: "lnr lnr-pencil btn btn-default",
+                          id: "button-edit-plan" %>
               <%= link_to "",
                           plan,
                           method: :delete,
                           class: "lnr lnr-circle-minus btn btn-danger",
-                          data: {confirm: "Tem certeza que deseja remover o plano #{plan.name}?"} %>
+                          data: {confirm: "Tem certeza que deseja remover o plano #{plan.name}?"},
+                          id: "button-delete-plan" %>
             </p>
           </div>
         </div>
@@ -93,8 +96,8 @@
   </div>
   <br>
   <span class="align-right">
-    <%= link_to " Carregar Planos", plans_import_page_path, class: "btn btn-success btn-outline lnr lnr-upload" %>
-    <%= link_to " Exportar Planos", plans_export_path(format: "json"), data: {disable_with: " Arquivo Gerado"}, class: "btn btn-dark btn-outline lnr lnr-download" %>
+    <%= link_to " Carregar Planos", plans_import_page_path, class: "btn btn-success btn-outline lnr lnr-upload", id:"load-plans" %>
+    <%= link_to " Exportar Planos", plans_export_path(format: "json"), data: {disable_with: " Arquivo Gerado"}, class: "btn btn-dark btn-outline lnr lnr-download", id: "export-plans" %>
   </span>
   <%= link_to "Novo plano", new_plan_path, class: "btn btn-primary", id: "button-create-plan" %>
 </div>
