--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,21 +1,27 @@
 <div class="container">
-  <h3 class="p-t-50 p-b-20">Editar papéis</h3>
-  <div class="col-xs-8">
-    <% @roles.each do |role| %>
-      <div class="offer offer-radius offer-paper" id="card_of_paper">
-        <div class="shape">
-          <div class="shape-text">
+  <h3 class="p-t-50 p-b-20">Papéis-chave</h3>
+  <% if !@roles.empty? %>
+    <div class="col-xs-8">
+      <% @roles.each do |role| %>
+        <div class="offer offer-radius offer-paper" id="card_of_paper">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content" id="card-role">
+            <h3 class="lead color-dark">
+              Papél chave: <%= role.name %>
+              Como me vejo no futuro: <%= role.description %>
+            </h3>
+            <%= link_to "", edit_role_path(role), class: "btn btn-default lnr lnr-pencil" %>
+            <%= link_to "", role, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
           </div>
         </div>
-        <div class="offer-content" id="card-role">
-          <h3 class="lead color-dark">
-            Papél chave: <%= role.name %>
-            Como me vejo no futuro: <%= role.description %>
-          </h3>
-          <%= link_to "", edit_role_path(role), class: "btn btn-default lnr lnr-pencil" %>
-          <%= link_to "", role, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% else %>
+    <h3>Você ainda não criou um papel.</h3>
+    <br/>
+    <%= link_to " Novo Papel", new_role_path, class: "btn btn-primary", id: "new-role-index" %>
+<% end %>
 </div>
