--- a/app/views/values/index.html.erb
+++ b/app/views/values/index.html.erb
@@ -1,22 +1,27 @@
 <div class="container">
-  <p id="notice"><%= notice %></p>
-  <h3 class="p-t-50 p-b-20">Editar valores</h3>
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-    <% @values.each do |value| %>
-      <div class="offer offer-radius offer-success">
-        <div class="shape">
-          <div class="shape-text">
+  <h3 class="p-t-50 p-b-20">Valores</h3>
+  <% if !@values.empty? %>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+      <% @values.each do |value| %>
+        <div class="offer offer-radius offer-success">
+          <div class="shape">
+            <div class="shape-text">
+            </div>
+          </div>
+          <div class="offer-content" id="card_of_value">
+            <h3 class="lead color-dark">
+              <%= value.name %>
+            </h3>
+            <%= link_to "", edit_value_path(value), class: "btn btn-default lnr lnr-pencil", id: "edit-value" %>
+            <%= link_to "", value, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-value" %>
           </div>
         </div>
-        <div class="offer-content" id="card_of_value">
-          <h3 class="lead color-dark">
-            <%= value.name %>
-          </h3>
-          <%= link_to "", edit_value_path(value), class: "btn btn-default lnr lnr-pencil", id: "edit-value"%>
-          <%= link_to "", value, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-value" %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% else %>
+    <h3>Você ainda não criou um valor.</h3>
+    <br/>
+    <%= link_to " Novo Valor", new_value_path, class: "btn btn-primary", id: "new-value-index" %>
+<% end %>
 </div>
 
