--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,5 @@
-<div id="page-container">
-  <div id="content-wrap">
-    <div class="footer">
+
+    <footer id="footer" class="footer">
       <div class="contain">
         <div class="col">
           <h1>O projeto</h1>
@@ -36,6 +35,4 @@
         </div>
         <div class="clearfix"></div>
       </div>
-    </div>
-  </div>
-</div>
+    </footer>
