--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,11 @@
 
 <%= render "layouts/notice" %>
 
-<%= yield %>
+<div id="page-container">
+  <div id="content-wrap">
+    <%= yield %>
+  </div>
+</div>
 
 <%= render "layouts/footer" unless @disable_footer %>
 
