Contribution page, footer content adjustments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,7 +69,7 @@
 }
 
 .footer .col {
-  width: 190px;
+  width: 300px;
   height: auto;
   float: left;
   box-sizing: border-box;
@@ -89,6 +89,21 @@
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 0.250em;
+
+}
+
+
+.footer .col h1-mission {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 17px;
+  padding: 20px 0px 5px 0px;
+  color: rgba(108, 108, 108, 0.89);
+  font-weight: normal;
+  letter-spacing: 0.1em;
+
 }
 
 .footer .col ul {
@@ -114,7 +129,26 @@
   padding-right: 5px !important;
 }
 
-.footer .col ul li:hover {
+.footer .col ul li a:hover {
+  color: #797979;
+  transition: .1s;
+  -webkit-transition: .1s;
+  -moz-transition: .1s;
+}
+
+.footer .col ul li a{
+  color: #999999;
+  font-size: 14px;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 5px 0px 5px 0px;
+  cursor: pointer;
+  transition: .2s;
+  -webkit-transition: .2s;
+  -moz-transition: .2s;
+}
+
+.footer .col ul li a:hover {
   color: #797979;
   transition: .1s;
   -webkit-transition: .1s;
