--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
           <li><%= link_to " ", contacts_path, method: "get", class: "lnr lnr-envelope" %></li>
           <li><%= link_to " ", users_path, method: "get", class: "lnr lnr-users" %></li>
       <% end %>
-        <li><%= link_to "STATUS", inicio_path, method: "get" %></li>
+        <li><%= link_to " STATUS", inicio_path, method: "get", class: "lnr lnr-pie-chart" %></li>
 
         <li><%= link_to "MEU PLANEJAMENTO", myplan_path, method: "get" %></li>
 
