--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -102,7 +102,7 @@
   text-shadow: 1px 1px #fff;
   font-weight: 500;
   font-size: 11pt;
-  magin-top: 1em;
+  margin-top: 1em;
 }
 
 .custom-file-input:hover::before {
