--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,3 +246,18 @@ hr {
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(47, 47, 47, 0.27), rgba(0, 0, 0, 0));
 }
+
+.position-relative {
+  position: relative;
+
+  .alert {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+  }
+}
+
+.alert {
+  margin-top: 20px;
+}
