Update UI to include 'forgot password' link

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,25 +1,26 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Entrar", new_session_path(resource_name), class: "btn btn-default btn-margin-bottom" %><br />
+  <%= link_to "Entrar", new_session_path(resource_name), class: "txt1 bo1 hov1" %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Cadastrar", new_registration_path(resource_name), class: "btn btn-default btn-margin-bottom" %><br />
+  <span class="txt1">Não tem uma conta?</span>
+  <%= link_to "Cadastrar", new_registration_path(resource_name), class: "txt1 bo1 hov1" %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Esqueceu sua senha?", new_password_path(resource_name) %><br />
+  <%= link_to "Esqueceu sua senha?", new_password_path(resource_name), class: "txt1 bo1 hov1" %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Não recebeu as instruções de confirmação?", new_confirmation_path(resource_name), class: "btn btn-default btn-margin-bottom" %><br />
+  <%= link_to "Não recebeu as instruções de confirmação?", new_confirmation_path(resource_name), class: "txt1 bo1 hov1" %><br />
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "btn btn-default btn-margin-bottom" %><br />
+  <%= link_to "Não recebeu instruções de desbloqueio?", new_unlock_path(resource_name), class: "txt1 bo1 hov1" %><br />
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Entrar com #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "btn btn-default btn-margin-bottom" %><br />
+    <%= link_to "Entrar com #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "txt1 bo1 hov1" %><br />
   <% end -%>
 <% end -%>
