Adding labels to objectives

--- a/app/assets/stylesheets/objectives.scss
+++ b/app/assets/stylesheets/objectives.scss
@@ -33,3 +33,17 @@
   border-radius: 3px;
   margin-bottom: 10px;
 }
+
+.label-objective {
+  display: block;
+  width: 130px;
+  text-align: center;
+  color: white;
+  background-color: #28a4e9;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
