New button to contribution

--- a/app/views/home/contribution.html.erb
+++ b/app/views/home/contribution.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
-  <h3 class="p-t-50 p-b-10">Contribua para o projeto Life to Remind</h3>
+  <h3 class="p-t-50 p-b-10">Make a contribution</h3>
 
   <hr/>
-  <h4>Contribua como Desenvolvedor</h4>
+  <h4>As a programmer or translator!</h4>
   <br/>
 
   <div class="container">
-    <a href="https://gitlab.com/edu_qg/ltr" class="color-dark">Link do Repositório</a>
+    <a href="https://github.com/eduqg/LifeToRemind" class="color-dark">
+      Click here to check the repository
+    </a>
     <br/>
     <br/>
 
-    <h5>Principais desenvolvedores </h5>
+    <h5>Contributors </h5>
     <br/>
     <div class="container">
       <h5>1) @_____________ </h5>
@@ -21,16 +23,15 @@
 
   <hr/>
 
-  <h4>Faça uma doação para o projeto</h4>
-  <br/>
-  <div class="container">
-    <h5></h5>
-  </div>
-  <hr/>
+  No sponsors yet! Get in touch to be the first!
 
-  <h4>Seja um patrocinador</h4>
   <br/>
-  <div class="container">
-    <h5>Ainda não temos um patrocinador, entre em contato para saber mais.</h5>
-  </div>
+  <br/>
+
+  If you want to support @eduqg, please consider buying a coffee. Thank you for your donation!
+
+  <br/>
+  <br/>
+  <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/4GkjyuEN3"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>
+
 </div>
