--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
       <h1>O projeto</h1>
       <ul>
         <li><%= link_to "Contato", new_contact_path %></li>
-        <li><%= link_to "Contribua para o projeto", home_contribution_path %></li>
+        <li><%= link_to "Faça uma contribuição", home_contribution_path %></li>
         <li><a href="http://fga.unb.br/">Faculdade UnB Gama</a></li>
         <li><a href="https://www.unb.br/">Universidade de Brasília</a></li>
       </ul>
