--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -11,8 +11,10 @@
   flex-direction: column;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.25);
   border-radius: 0.8rem;
   margin: 1em;
+  padding: 10px 10% 5px;
 }
 
 .card-plan {
@@ -76,8 +78,6 @@
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
-  background-color: #ffffff;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   text-align: center;
 }
 
@@ -85,11 +85,18 @@
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
 }
 
+.card-body {
+  margin: 0.5rem 0;
+  h5 {
+    font-weight: 600;
+    color: #333;
+    margin: 0.5rem 0 0;
+  }
+}
+
 .card-footer {
-  padding: 0.75rem 1.25rem;
-  background-color: #f7f7f9;
+  padding: 1.25rem;
   border-top: 1px solid rgba(0, 0, 0, 0.125);
-  text-align: center;
 }
 
 .card-footer:last-child {
