--- a/app/assets/stylesheets/text_side_button.scss
+++ b/app/assets/stylesheets/text_side_button.scss
@@ -76,7 +76,7 @@
 .field-group-swot {
   display: flex;
   flex-direction: row;
-  width: 98;
+  width: 98%;
   font-family: Raleway-Black;
   margin-left: 5px;
   margin-right: 45px
