--- a/app/assets/stylesheets/theme/templatemo-style.scss
+++ b/app/assets/stylesheets/theme/templatemo-style.scss
@@ -604,6 +604,7 @@ header .social-icon li a {
   }
   .navbar-toggle {
     margin-top: 15px;
+    margin-bottom: 15px;
   }
   .navbar-collapse {
     max-height: 300px;
