--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 
 <!-- %= render "headertemplate" % -->
 
-<%= render "navbarlanding" %>
+<%= render "layouts/navbar" %>
 
 <!-- start home -->
 <section id="home">
