--- a/app/views/plans/inicio.html.erb
+++ b/app/views/plans/inicio.html.erb
@@ -1,6 +1,6 @@
 <div class="row p-t-50">
   <div class="col-md-12">
-    <h2 class="wow" data-wow-offset="50" data-wow-delay="0.3s"><span>Status do meu planejamento</span></h2>
+    <h2 class="wow" data-wow-offset="50" data-wow-delay="0.3s"><span>Gráficos do meu planejamento</span></h2>
   </div>
 </div>
 
